[package]
name = "virtual-filesystem"
authors = ["Andrew Buck <mrelectrify@warsaw-revamped.com>", "Assuka <assuka@277852.xyz>"]
description = "A virtual filesystem implemented in Rust."
documentation = "https://docs.rs/crate/virtual-filesystem"
version = "0.2.2"
edition = "2024"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/ElonGaties/virtual-fs"
keywords = ["vfs", "filesystem", "virtual", "memory"]

[dependencies]
enumflags2 = "0.7"
itertools = "0.14"
mockall = "0.13"
normalize-path = "0.2"
parking_lot = "0.12"
path-slash = "0.2"
tar = "0.4"
zip = "2.2"

[dev-dependencies]
xz = "0.1"
